# block2-preview

./: .gitignore  .readthedocs.yaml  CITATIONS.bib  CMakeLists.txt  CMakeSettings.json  MANIFEST.in  README.md  block2_driver.py  block_driver.py  dmrg-1pdm.py  dmrg-restart.py  dmrg.py  ftdmrg.py  gaopt_driver.py  ltdmrg.py  parser.py  pre-1pdm.py  pre.py  pyproject.toml  setup.py
.github/workflow/: build.yml
.github/workflows/: build.yml  build_pypi.py
CMake/: block2Config.cmake.in
data/: C2.CAS.PVDZ.FCIDUMP  C2.CAS.PVDZ.FCIDUMP.ORIG  C2.PVDZ.FCIDUMP.C2LZ  CR2.SVP.FCIDUMP  CR2.SVP.HF  CR2.SVP.OCC  CR2.SVP.STOCC  H10.STO6G.R1.8.FCIDUMP  H10.STO6G.R1.8.FCIDUMP.C1  H10.STO6G.R1.8.FCIDUMP.LOWDIN  H10.STO6G.R1.8.ROTATION.LOWDIN  H2.6-31GSS.FCIDUMP  H2.PVDZ.FCIDUMP.C1  H2O.STO3G.DHF-B.FCIDUMP  H2O.STO3G.DHF-C.FCIDUMP  H2O.STO3G.DHF-G.FCIDUMP  H2O.TZVP.FCIDUMP  H2O.TZVP.OCC  H4.STO6G.R1.8.FCIDUMP  H8.STO6G.R1.8.FCIDUMP  HUBBARD-L16.FCIDUMP  HUBBARD-L2.FCIDUMP  HUBBARD-L6.FCIDUMP  HUBBARD-L8.FCIDUMP  N2.CAS.6-31G.FCIDUMP  N2.CAS.PVDZ.FCIDUMP  N2.CAS.PVDZ.FOCK  N2.CAS.PVDZ.T0.FCIDUMP  N2.CAS.PVDZ.T1.FCIDUMP  N2.CAS.PVDZ.T2.FCIDUMP  N2.STO3G.2PDM  N2.STO3G.FCIDUMP  N2.STO3G.FCIDUMP.C1  N2.STO3G.GHF.FCIDUMP  N2.STO3G.RHF.FCIDUMP  N2.STO3G.UHF.FCIDUMP
docs/: Doxygen  MPSAlgebra.ipynb  dmrg-options.md  driver.md  requirements.txt
docs/source/: conf.py  index.rst
gs_mps/: F.MPS.INFO.KET.LEFT.6  F.MPS.INFO.KET.LEFT.8  F.MPS.INFO.KET.RIGHT.1  F.MPS.INFO.KET.RIGHT.5  F.MPS.KET.0  F.MPS.KET.1  F.MPS.KET.2  F.MPS.KET.3  F.MPS.KET.4  F.MPS.KET.5  F.MPS.KET.6  F.MPS.KET.7  F.MPS.KET.8  F.MPS.KET.9  GS_ENERGY  GS_FCIDUMP  GS_MPS_INFO
legacy/: dmrg-1pdm.py  dmrg-restart.py  dmrg.py
pyblock2/: __init__.py  chebydmrg.py  ci.py  dmrgscf.py  ft_chebydmrg.py  ft_dmrg.py  ft_gfdmrg.py  ft_tddmrg.py  ftdmrg.py  gfdmrg.py  gsdmrg.py  ltdmrg.py  mp.py  mrpt.py  sidmrg.py  tools.py
pyblock2/algebra/: __init__.py  core.py  hamil.py  hamiltonian.py  io.py  pde.py
pyblock2/cc/: eom_gccsd.py  eom_rccsd.py  eom_uccsd.py  gccsd.py  gccsdt.py  lambda_gccsd.py  lambda_rccsd.py  lambda_uccsd.py  rccsd.py  rccsdt.py  rdm_gccsd.py  rdm_rccsd.py  rdm_uccsd.py  uccsd.py
pyblock2/driver/: block2.py  block2main  core.py  gaopt  gaopt.py  main.py  parser.py  readwfn.py  stopt.py  writewfn.py
pyblock2/icmr/: dmrg_helper.py  eri_helper.py  icmrcisd.py  icmrcisd_full.py  icmrrept2.py  icmrrept2_full.py  icmrrept2_ortho.py  icnevpt2.py  icnevpt2_full.py  icnevpt2_ortho.py  scnevpt2.py
pyblock2/main_test/: 000-main.in  001-main.in  002-check.py  002-main.in  003-check.py  003-main.in  004-main.in  005-check.py  005-main.in  006-check.py  006-main.in  007-check.py  007-main.in  008-main.in  009-check.py  009-main.in  010-check.py  010-main.in  011-check.py  011-main.in  012-check.py  012-main.in  013-check.py  013-main.in  014-check.py  014-main.in  015-check.py  015-main.in  016-main.in  017-check.py  017-main.in  018-check.py  018-main.in  019-check.py  019-main.in  020-main.in  021-check.py  021-main.in  022-check.py  022-main.in  (+42 more)
pyblock2/uc/: ci.py  mp.py
pyblock2/unit_test/: conftest.py  dmrg.py  dmrg_add.py  dmrg_excited.py  dmrg_mpo.py  dmrg_multiply.py  dmrg_nord.py  dmrg_npdm.py  dmrg_pde.py  dmrg_soc.py
src/: block2.hpp  block2_big_site.hpp  block2_core.hpp  block2_dmrg.hpp  block2_ic.hpp  block2_mrci.hpp  block2_sp_dmrg.hpp  main.cpp  pybind.cpp  quantum.cpp  quantum.hpp
src/big_site/: big_site.hpp  csf_big_site.hpp  drt_big_site.hpp  drt_mps.hpp  qc_hamiltonian_big_site.hpp  sci_fcidump.hpp  sci_fock_big_site.cpp  sci_fock_big_site.hpp  sci_fock_determinant.hpp  sweep_algorithm_big_site.hpp
src/block2/: abstract_sci_wrapper.hpp  allocator.hpp  ancilla.hpp  archived_mpo.hpp  archived_sparse_matrix.hpp  archived_tensor_functions.hpp  batch_gemm.hpp  cg.hpp  complex_matrix_functions.hpp  csr_matrix.hpp  csr_matrix_functions.hpp  csr_operator_functions.hpp  csr_sparse_matrix.hpp  delayed_sparse_matrix.hpp  delayed_tensor_functions.hpp  determinant.hpp  effective_hamiltonian.hpp  expr.hpp  fft.hpp  fp_codec.hpp  hamiltonian.hpp  hamiltonian_SCI.hpp  hubbard.hpp  integral.hpp  integral_compressed.hpp  matching.hpp  matrix.hpp  matrix_functions.hpp  moving_environment.hpp  mpo.hpp  mpo_fusing.hpp  mpo_simplification.hpp  mps.hpp  (+36 more)
test/: FCIDUMP  dmrg.conf.6  dmrg.conf.60  kmat
tests/: cr2-input
tmp/: F.MPS.DKET0.0  F.MPS.DKET0.1  F.MPS.DKET0.2  F.MPS.DKET0.3  F.MPS.DKET0.4  F.MPS.DKET0.5  F.MPS.DKET0.6  F.MPS.DKET0.7  F.MPS.DKET0.8  F.MPS.DKET0.9  F.MPS.DKET1.0  F.MPS.DKET1.1  F.MPS.DKET1.2  F.MPS.DKET1.3  F.MPS.DKET1.4  F.MPS.DKET1.5  F.MPS.DKET1.6  F.MPS.DKET1.7  F.MPS.DKET1.8  F.MPS.DKET2.1  F.MPS.DKET2.2  F.MPS.DKET2.3  F.MPS.DKET2.4  F.MPS.DKET2.5  F.MPS.DKET2.6  F.MPS.DKET2.7  F.MPS.DKET2.8  F.MPS.DKET2.9  F.MPS.DKET3.0  F.MPS.DKET3.1  F.MPS.DKET3.2  F.MPS.DKET3.3  F.MPS.DKET3.4  F.MPS.DKET3.5  F.MPS.DKET3.6  F.MPS.DKET3.7  F.MPS.DKET3.8  F.MPS.DKET3.9  F.MPS.DKET4.-1  F.MPS.DKET4.0  (+144 more)
unit_test/: debug_main.cpp  debug_test_csf_big_site.cpp  debug_test_dmrg.cpp  debug_test_dmrg_auto.cpp  debug_test_dmrg_auto_mpo_se.cpp  debug_test_dmrg_auto_se.cpp  debug_test_dmrg_big_site.cpp  debug_test_dmrg_ksymm.cpp  debug_test_dmrg_n2_sto3g_nh.cpp  debug_test_dmrg_nevpt2.cpp  debug_test_dmrg_sa_n2_sto3g_nh.cpp  debug_test_dmrg_sgb_heis.cpp  debug_test_dmrg_sgf.cpp  debug_test_dmrg_sgf_cds.cpp  debug_test_dmrg_sgfcpx_auto.cpp  debug_test_dmrg_spin_orb.cpp  debug_test_dmrg_spin_orb_auto.cpp  debug_test_dmrg_ss_1site_c2_pvdz.cpp  debug_test_dmrg_ss_c2_pvdz.cpp  debug_test_dmrg_sz.cpp  debug_test_dmrg_sz_auto.cpp  debug_test_green_func_h10_sto6g_auto.cpp  debug_test_orbital_rotation.cpp  debug_test_rte_green_func.cpp  debug_test_su2_to_sz.cpp  test_ancilla.cpp  test_ancilla_1site_h8_sto6g.cpp  test_ancilla_h8_sto6g.cpp  test_ancilla_n2_sto3g.cpp  test_ancilla_tspace_h8_sto6g.cpp  test_batch_gemm.cpp  test_cg.cpp  test_complex_matrix.cpp  test_compress.cpp  test_compress_n2_sto3g.cpp  test_csf_space.cpp  test_csr_matrix.cpp  test_delayed_n2_sto3g.cpp  test_det_n2_sto3g.cpp  test_determinant.cpp  (+44 more)
(+1208 files in other folders)
